array.island.Island.scala.error
Compilation error:
Island:5: error: type mismatch;
 found   : Int
 required: Boolean
    if (num(rg) << num(rg+1)) {
                ^